--- a/kernels/lmul8_kernel_benchmark_package/Makefile
+++ b/kernels/lmul8_kernel_benchmark_package/Makefile
@@ -1,51 +1,63 @@
-# Makefile for LMUL=8 (64x2) SGEMM kernel benchmark
-CC = gcc
-CFLAGS = -O3 -march=rv64gcv_zvl256b -mabi=lp64d -std=c11 -Wall -Wextra
+# Makefile — 24-hour SGEMM benchmark (LMUL=8)
+
+CC      = gcc
+CFLAGS  = -O3 -march=rv64gcv_zvl256b -mabi=lp64d -std=c11 -Wall -Wextra
 LDFLAGS = -lm
 
-TARGET = sgemm_bench
-KERNEL = sgemm_kernel_64x2_zvl256b_lmul8.c
+TARGET    = sgemm_bench_lmul8
+KERNEL    = sgemm_kernel_64x2_zvl256b_lmul8.c
 BENCHMARK = sgemm_kernel_64x2_zvl256b_lmul8_benchmark.c
 
-.PHONY: all clean run quick 24h 24h-bg monitor status kill help
+.PHONY: all clean 24h 24h-bg monitor status kill help
 
 all: $(TARGET)
 
 $(TARGET): $(KERNEL) $(BENCHMARK)
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
-	@echo "✓ Built $@ (LMUL=8 64x2)"
+	@echo "✓ Built $@ (LMUL=8)"
 
 clean:
-	rm -f $(TARGET) *.o
+	rm -f $(TARGET) *.o 24h_benchmark_lmul8_*.log
 	@echo "✓ Cleaned"
 
-run: $(TARGET)
-	@./$(TARGET) $(M) $(N) $(K) 1.0 5 20
-
-quick: $(TARGET)
-	@./$(TARGET) 256 256 256 1.0 3 10
-
+# 24-hour interactive
 24h: $(TARGET)
 	@chmod +x run_bench_lmul8.sh
 	@./run_bench_lmul8.sh 24h
 
+# 24-hour background
 24h-bg: $(TARGET)
 	@chmod +x run_bench_lmul8.sh
 	@./run_bench_lmul8.sh bg
 
 monitor:
-	@./run_bench_lmul8.sh monitor
+	@if ps aux | grep -v grep | grep -q "$(TARGET)"; then \
+		echo "✓ Benchmark is RUNNING"; \
+		ps aux | grep $(TARGET) | grep -v grep; \
+		ls -t 24h_benchmark_lmul8_*.log 2>/dev/null | head -1 | xargs -r tail -10; \
+	else \
+		echo "✗ No benchmark running"; \
+	fi
 
 status:
-	@./run_bench_lmul8.sh status
+	@if ps aux | grep -v grep | grep -q "$(TARGET)"; then \
+		echo "STATUS: RUNNING"; \
+		ps aux | grep $(TARGET) | grep -v grep | awk '{print "PID:",$$2}'; \
+	else \
+		echo "STATUS: STOPPED"; \
+	fi
 
 kill:
-	@./run_bench_lmul8.sh kill
+	@pkill -f "$(TARGET)" 2>/dev/null || true
+	@pkill -f "run_bench_lmul8.sh" 2>/dev/null || true
+	@echo "✓ Benchmark stopped"
 
 help:
-	@echo "LMUL=8 BENCHMARK COMMANDS:"
-	@echo "  make                 - Build"
-	@echo "  make quick           - Quick sanity run"
-	@echo "  make run M= N= K=     - Single run"
-	@echo "  make 24h / 24h-bg    - 24-hour benchmark"
-	@echo "  make monitor/status/kill"
+	@echo "LMUL=8 24-HOUR BENCHMARK COMMANDS:"
+	@echo "  make          - Build"
+	@echo "  make 24h      - 24-hour benchmark (interactive)"
+	@echo "  make 24h-bg   - 24-hour benchmark (background)"
+	@echo "  make monitor  - Monitor progress"
+	@echo "  make status   - Check status"
+	@echo "  make kill     - Stop benchmark"
+	@echo "  make clean    - Clean files"
