--- a/Banana-pi_1.0_rvv_OpenBLAS_ Benchmark/Unrolling_factor_4_Pragma/Makefile
+++ b/Banana-pi_1.0_rvv_OpenBLAS_ Benchmark/Unrolling_factor_4_Pragma/Makefile
@@ -1,12 +1,20 @@
 CC = gcc
-CFLAGS = -O3 -march=rv64gcv_zvl256b -mabi=lp64d -Wall -std=c11
+
+CFLAGS = -O3 \
+         -march=rv64gcv_zvl256b \
+         -mabi=lp64d \
+         -std=c11 \
+         -Wall
 
 TARGET = bench
 
+KERNEL = sgemm_kernel_16x8_zvl256b_lmul1_opt_unroll4.c
+BENCH  = sgemm_bench.c
+
 all: $(TARGET)
 
-$(TARGET): sgemm_kernel_16x8_zvl256b_lmul1_opt_unroll4.c sgemm_bench.c
-	$(CC) $(CFLAGS) $^ -o $(TARGET)
+$(TARGET): $(KERNEL) $(BENCH)
+	$(CC) $(CFLAGS) $(KERNEL) $(BENCH) -o $(TARGET)
 
 clean:
 	rm -f $(TARGET)
